# logisticAutobase

./: CMakeLists.txt
Client/: resources.qrc
Client/header/: authorizationDialog.h  client.h  logisticAutobase.h  mainwindow.h  parcelCard.h  parcelDialogAdd.h  parcelDialogDelete.h  parcelDialogEdit.h  parcelDialogMove.h  parcelDialogOpen.h  tableDialogAdd.h  tableDialogDelete.h  tableDialogEdit.h  tableDialogExport.h  tableDialogOpen.h  tableDialogRename.h  tableDialogView.h  userTable.h
Client/src/: authorizationDialog.cpp  client.cpp  main.cpp  mainwindow.cpp  parcelCard.cpp  userTable.cpp
Docker/: .env  .env.save  docker-compose.yml  init.sql
Docker/Server/: Dockerfile  config.json
Server/header/: server.h  sqlwork.h
Server/src/: main.cpp  server.cpp  sqlwork.cpp
